로그인후 dropbox div를 if문 안에 넣음 -jin-

--- a/2weeks/src/main/webapp/resources/css/common/header.css
+++ b/2weeks/src/main/webapp/resources/css/common/header.css
@@ -163,7 +163,8 @@ a:hover, a:active {text-decoration: none; color: #394956;}
 }
 .header-profile-text{
 	font-size: 20px;
-	margin-left: 5px;
+	margin-left: 5px;	
+	padding-left: 15px;
 }
 
 #nick {
