메인페이지 최신 뉴스 2개 출력하기 완료

--- a/2weeks/src/main/webapp/resources/css/common/main.css
+++ b/2weeks/src/main/webapp/resources/css/common/main.css
@@ -173,8 +173,9 @@
     color: #007b5e!important;
 }
 .frontside .card {
-    min-height: 100px;
+    min-height: 80px;
 }
 .frontside{
 	 border : 1px solid black;
+	 margin-top : 10px;
 }
