--- a/2weeks/src/main/webapp/resources/css/common/header.css
+++ b/2weeks/src/main/webapp/resources/css/common/header.css
@@ -186,7 +186,8 @@ a:hover, a:active {text-decoration: none; color: #394956;}
 	min-width: 130px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;	
-    margin-top: 23px;	
+    margin-top: 23px;
+    margin-left: 35px;	
 }
 .dropdown-content a{
 	color: black;
