--- a/2weeks/src/main/webapp/resources/css/common/main.css
+++ b/2weeks/src/main/webapp/resources/css/common/main.css
@@ -8,16 +8,36 @@
 	align-items: stretch;
 	font-family: 'Pretendard';
 }
-.item{	
-    overflow: hidden;
+
+.dark1{
+	overflow: hidden;
     position: relative;
     border-radius: 14px;
-    background-color: var(--colorBg10);
+    background-color: #394956;
+}
+
+.item{	
+	overflow: hidden;
+    position: relative;
+    border-radius: 14px;
+    background-color: #FFFFFF;
     box-shadow: rgb(0 0 0 / 15%) 0px 5px 10px 0px;
 }
 
 .1st{
 	height: 50px;
+}
+
+.dark1:nth-child(9) {
+	grid-column: 1/4;
+	grid-template-columns: 1fr, 1fr;
+}
+.dark1:nth-child(10){
+	grid-column: 4/9;
+	grid-template-columns: 1fr, 1fr;
+}
+.dark1:nth-child(11){
+	grid-column: 1/9;
 }
 
 .item:nth-child(9) {
@@ -31,6 +51,8 @@
 .item:nth-child(11){
 	grid-column: 1/9;
 }
+
+
 #home-map-area{
 	text-align:center;
 }
@@ -47,33 +69,43 @@
 .report{
 	width: 355px;
 	height: 100%;
-	display: inline-block;
-	
+	display: inline-block;	
 }
 #reportTab{
-	font-size: 13px;
+	font-size: 14px;
 	width: 320px;
     margin: auto;     
     table-layout:fixed;
+    height: 85%;
 }
-#reportTab tr td{
+
+#reportTitle{
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
 	cursor: pointer;
+	text-align: left;
 }
-#reportTab tr td:hover{
+
+#reportTitle:hover{
 	color: #6E6E6E;
 	font-weight: bolder;
 }
 
-.report>div{
+#reportHr{
+    margin: 7px auto 7px auto;
+}
+
+#reportreport{
 	font-weight: bolder;
 	font-size: 20px;
     text-align: center;
     margin: 25px 15px 15px 15px;
 }
-#reportMove:hover, #mapMove:hover{
+.move{
+	color: #394956;   
+}
+.move:hover{
 	color: #6E6E6E;
 	font-weight: bolder;
 }
