상세 검색 결과 연결. 페이지바 수정 필요 -jin-

--- a/2weeks/src/main/webapp/resources/css/search/searchResult.css
+++ b/2weeks/src/main/webapp/resources/css/search/searchResult.css
@@ -90,11 +90,13 @@
   	padding:15px;
   	text-align:center;
   	display:center;
+	cursor: pointer;
 }
 .searchResult-detail div{
 	display:inline-block;
 	font-family:'Pretendard';
-  	font-size:17px;
+  	font-size:17px;	
+    cursor: pointer;
 }
 .searchResult-detail span{
 	font-family:'Pretendard';
@@ -103,3 +105,4 @@
   	color: darkgray;
   	margin-left:5px;
 }
+
