--- a/2weeks/src/main/webapp/resources/css/common/header.css
+++ b/2weeks/src/main/webapp/resources/css/common/header.css
@@ -204,7 +204,7 @@ body.dark{
 .dropdown-content{
 	display: none;
 	position: absolute;
-	background-: #f1f1f1;
+	background-color: #f1f1f1;
 	min-width: 130px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;	
